Using a table works much better. The column structure of our UI is now set up and our markup code remains small and simple.

--- a/res/main.css
+++ b/res/main.css
@@ -1,16 +1,6 @@
-﻿html, body {
-    height: 100%;
-}
-
-.outerMostWrapper {
-    height: 100vh;
-    width: 95%;
-    display: flex;
-}
-
-#instructions, #registers, #memory, #contrlPnl {
-    height: 100vh;
+﻿td {
+    vertical-align: top;
+    height: 96vh;
     width: 25%;
-    float: left;
     overflow-y: scroll;
 }
