tis file is able to display data from memory c++ object

--- a/res/main.css
+++ b/res/main.css
@@ -1,6 +1,12 @@
-﻿td {
+﻿.outerColumn {
     vertical-align: top;
     height: 96vh;
     width: 25%;
     overflow-y: scroll;
+}
+
+.memoryRow {
+    height: 48vh;
+    overflow-y: scroll;
+    prototype: 
 }
